Fixed Overflow Bug on mobile

--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -616,4 +616,8 @@
         width: 275px;
         height: 183px;
     }
+
+    html {
+        overflow: hidden;
+    }
 }
