--- a/sass/styles.css
+++ b/sass/styles.css
@@ -222,11 +222,11 @@ html {
 }
 
 html {
-  overflow: hidden;
   background-color: black;
 }
 
 header {
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   padding: 9px;
@@ -2213,5 +2213,8 @@ h1 {
     left: 16%;
     width: 275px;
     height: 183px;
+  }
+  html {
+    overflow: hidden;
   }
 }/*# sourceMappingURL=styles.css.map */
